<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园讲座</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!--地图显示目录字符串-->
    <string name="map_location">我的位置</string>
    <string name="map_search">搜索查询</string>
    <string name="map_road">路径导航</string>
    <!-- 滑动区域文字及链接 -->
    <string name="title1">苹果在中国市场：Google的劣势反而是苹果的优势</string>
    <string name="title2">吞噬大数据存储领域新机制——NoSQL模式解析</string>
    <string name="title3">神舟九号：宇航员会携带什么移动应用上天？</string>
    <string name="title4">2012苹果全球开发者大会（WWDC）12日开幕</string>
    <string name="title5">Win8说：请把PC丢出窗外！</string>
    <string name="city">城市</string>
    <string name="beijing">北京</string>
    <string name="wuhan">武汉</string>
    <string name="geocode">定位</string>
    <string name="ReverseGeoCode">重置</string>
    <string name="keyhint">请输入</string>
    <string name="title_activity_main">校园讲座</string>
    <string name="title_sub">给你最精彩的</string>
    <string name="title_jiansuo">学校检索</string>
    <string name="TodayTopic">今日看点</string>
    <string name="QuicklySearch">快速检索</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="renren">人人网</string>
    <string name="qzone">QQ空间</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
    <string name="share">分享</string>
    <string name="get_user_info_sw">获取新浪微博授权用户资料</string>
    <string name="get_user_info_tc">获取腾讯微博授权用户资料</string>
    <string name="get_user_info_rr">获取人人网授权用户资料</string>
    <string name="get_user_info_qz">获取QQ空间授权用户资料</string>
    <string name="get_my_info">获取授权用户资料</string>
    <string name="get_other_info">获取其他用户资料</string>
    
        <string name="user_inf_myguanzhu">关注</string>
    <string name="user_inf_myfensi">粉丝</string>
    <string name="user_inf_myfabu">发布</string>

</resources>